--- a/workflow/envs/env.yml
+++ b/workflow/envs/env.yml
@@ -3,7 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - snakemake
-  - snakefmt
-  - black
-  - snakedeploy
+  - repeatmasker>=4.0
+  - trf>=4.09.1
+  - bedtools>=2.30.0
+  - samtools>=1.9 
+  - seqtk
+  - pysam
