--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -35,6 +35,7 @@ include: "rules/split.smk"
 include: "rules/RepeatMasker.smk"
 include: "rules/DupMasker.smk"
 include: "rules/trf.smk"
+include: "rules/windowmasker.smk"
 
 
 rule all:
@@ -43,3 +44,4 @@ rule all:
         trf=expand(rules.trf.output, sample="test"),
         RepeatMasker=expand(rules.RepeatMasker.output, sample="test"),
         DupMasker=expand(rules.DupMasker.output, sample="test"),
+        windowmasker=expand(rules.windowmasker.output, sample="test"),
