--- a/workflow/envs/env.yml
+++ b/workflow/envs/env.yml
@@ -6,8 +6,9 @@ dependencies:
   - repeatmasker=4.1.2
   - trf=4.09
   - bedtools=2.30.0
-  - samtools=1.13 
+  - samtools=1.13
   - blast=2.6.0
   - seqtk
   - pysam
   - pandas
+  - numba
