Adding dna-brnn

--- a/workflow/envs/env.yml
+++ b/workflow/envs/env.yml
@@ -7,6 +7,8 @@ dependencies:
   - trf=4.09
   - bedtools=2.30.0
   - samtools=1.13
+  - htslib=1.13
+  - bcftools=1.13
   - seqtk
   - pysam
   - pandas
