--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -61,3 +61,4 @@ include: "rules/DupMasker.smk"
 include: "rules/trf.smk"
 include: "rules/windowmasker.smk"
 include: "rules/gaps.smk"
+include: "rules/dna-nn.smk"
