--- a/workflow/envs/env.yml
+++ b/workflow/envs/env.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - repeatmasker=4.1.2
+  - repeatmasker=4.1.2-p1
   - trf=4.09
   - bedtools=2.30.0
   - samtools=1.13
