--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,8 +3,8 @@ samples:
   HG002_2: "hap1.fasta"
   
 # optional configurations
-threads: 16
-mem: 16
-trf_opts: "2 7 7 80 10 50 15 -l 25"
-RepeatMaskerSpecies: "human"
-RepeatMaskerOptions: "-s -xsmall -e ncbi"
+#threads: 16
+#mem: 8
+#trf_opts: "2 7 7 80 10 50 15 -l 25"
+#RepeatMaskerSpecies: "human"
+#RepeatMaskerOptions: "-s -xsmall -e ncbi"
