Updating the default trf default options to match new recomendations from the docs

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -54,6 +54,10 @@ scattergather:
     fasta=n_records,
 
 
+wildcard_constraints:
+    sample="|".join(list(config["samples"].keys())),
+
+
 # rules for each program
 include: "rules/split.smk"
 include: "rules/RepeatMasker.smk"
