--- a/workflow/envs/env.yml
+++ b/workflow/envs/env.yml
@@ -3,13 +3,13 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - repeatmasker=4.1.2-p1
+  - repeatmasker=4.1.5
   - rmblast
   - trf=4.09
   - bedtools=2.30.0
-  - samtools=1.13
-  - htslib=1.13
-  - bcftools=1.13
+  - samtools=1.18
+  - htslib=1.18
+  - bcftools=1.18
   - seqtk
   - pysam
   - pandas
