--- a/workflow/envs/env.yml
+++ b/workflow/envs/env.yml
@@ -1,10 +1,10 @@
 channels:
-  - bioconda
   - conda-forge
+  - bioconda
   - defaults
 dependencies:
   - repeatmasker=4.1.5
-  - rmblast
+  #- rmblast
   - trf=4.09
   - bedtools=2.30.0
   - samtools=1.18
